Text Align Left for quote body fix

--- a/frontend/src/components/Tweet/Tweet.css
+++ b/frontend/src/components/Tweet/Tweet.css
@@ -56,6 +56,7 @@
     border-bottom-style: solid;
     border-bottom: 1%;
     border-color: grey;
+    text-align: left;
 }
 
 .TweetArticleContainer {
